# anyvnc

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
apps/ui/: CMakeLists.txt  main.cpp
apps/ui/android/: AndroidManifest.xml  build.gradle
apps/ui/android/res/values/: strings.xml
apps/ui/android/src/com/anyvnc/: AnyVncAccessibilityService.java
cmake/: CPackDefinitions.cmake
cmake/modules/: .FindLibVNCServer.cmake.swp  AnyVnc.cmake  CreateTranslations.cmake  WindowsInstaller.cmake
cmake/nsis/: anyvnc.nsi
libanyvnc/: CMakeLists.txt
libanyvnc/core/: AnyVncCore.h  CMakeLists.txt  Export.h  Filesystem.h  PluginLoader.cpp  PluginLoader.h  Server.cpp  Server.h  Utils.h
libanyvnc/interfaces/: AnyVncInterfaces.h  CMakeLists.txt  ClientBackend.cpp  ClientBackend.h  Clipboard.cpp  Clipboard.h  Framebuffer.cpp  Framebuffer.h  Keyboard.cpp  Keyboard.h  Plugin.cpp  Plugin.h  PointingDevice.cpp  PointingDevice.h  ServerBackend.cpp  ServerBackend.h  ServerPlugin.cpp  ServerPlugin.h  UserInterface.cpp  UserInterface.h
libanyvnc/qt/: CMakeLists.txt
libanyvnc/qt/core/: AnyVncQt.cpp  AnyVncQt.h  AnyVncQtCore.h  CMakeLists.txt  KeyboardShortcutTrapper.h  VncConnection.cpp  VncConnection.h  VncEvents.cpp  VncEvents.h  VncServer.cpp  VncServer.h  VncView.cpp  VncView.h
libanyvnc/qt/quick/: AnyVncQtQuick.h  CMakeLists.txt  QSGImageTexture.cpp  VncViewItem.cpp  VncViewItem.h  VncViewItemBase.cpp  VncViewItemBase.h
libanyvnc/qt/widgets/: AnyVncQtWidgets.h  CMakeLists.txt  VncViewWidget.cpp  VncViewWidget.h
libanyvnc/types/: PixelFormat.h  Point.h  Rectangle.h  Screen.h  Size.h  VersionNumber.h
plugins/: CMakeLists.txt
plugins/backend/: CMakeLists.txt
plugins/backend/libvnc/: CMakeLists.txt
plugins/backend/libvnc/server/: CMakeLists.txt  LibVncServerBackend.cpp  LibVncServerBackend.h
plugins/clipboard/dummy/: CMakeLists.txt  DummyClipboard.cpp  DummyClipboard.h
plugins/framebuffer/android/: AndroidMediaProjectionFramebuffer.cpp  AndroidMediaProjectionFramebuffer.h  CMakeLists.txt
plugins/framebuffer/dummy/: CMakeLists.txt  DummyFramebuffer.cpp  DummyFramebuffer.h
plugins/framebuffer/windows/: CMakeLists.txt
plugins/framebuffer/windows/deskdupengine/: CMakeLists.txt  DeskDupEngine.cpp  DeskDupEngine.h  WindowsDeskDupEngineFramebuffer.cpp  WindowsDeskDupEngineFramebuffer.h
plugins/keyboard/: CMakeLists.txt
plugins/keyboard/dummy/: CMakeLists.txt  DummyKeyboard.cpp  DummyKeyboard.h
plugins/keyboard/windows/: CMakeLists.txt  WindowsKeyboard.cpp  WindowsKeyboard.h
plugins/pointingdevice/: CMakeLists.txt
plugins/pointingdevice/android/: AndroidPointingDevice.cpp  AndroidPointingDevice.h  CMakeLists.txt
plugins/pointingdevice/dummy/: CMakeLists.txt  DummyPointingDevice.cpp  DummyPointingDevice.h
plugins/pointingdevice/windows/: CMakeLists.txt  WindowsPointingDevice.cpp  WindowsPointingDevice.h
plugins/ui/: CMakeLists.txt
plugins/ui/qtquick/: AnyVncUI.qml  CMakeLists.txt  QtQuickUserInterface.cpp  QtQuickUserInterface.h  main.cpp  qtquick-ui.qrc
